// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePickerYears.ts should format years 1`] = `
<ul class="v-date-picker-years">
  <li>
    (1001)
  </li>
</ul>
`;

exports[`VDatePickerYears.ts should not allow min to be greater then max 1`] = `
<ul class="v-date-picker-years">
  <li>
    1234
  </li>
</ul>
`;

exports[`VDatePickerYears.ts should render component and match snapshot 1`] = `
<ul class="v-date-picker-years">
  <li>
    2100
  </li>
  <li>
    2099
  </li>
  <li>
    2098
  </li>
  <li>
    2097
  </li>
  <li>
    2096
  </li>
  <li>
    2095
  </li>
  <li>
    2094
  </li>
  <li>
    2093
  </li>
  <li>
    2092
  </li>
  <li>
    2091
  </li>
  <li>
    2090
  </li>
  <li>
    2089
  </li>
  <li>
    2088
  </li>
  <li>
    2087
  </li>
  <li>
    2086
  </li>
  <li>
    2085
  </li>
  <li>
    2084
  </li>
  <li>
    2083
  </li>
  <li>
    2082
  </li>
  <li>
    2081
  </li>
  <li>
    2080
  </li>
  <li>
    2079
  </li>
  <li>
    2078
  </li>
  <li>
    2077
  </li>
  <li>
    2076
  </li>
  <li>
    2075
  </li>
  <li>
    2074
  </li>
  <li>
    2073
  </li>
  <li>
    2072
  </li>
  <li>
    2071
  </li>
  <li>
    2070
  </li>
  <li>
    2069
  </li>
  <li>
    2068
  </li>
  <li>
    2067
  </li>
  <li>
    2066
  </li>
  <li>
    2065
  </li>
  <li>
    2064
  </li>
  <li>
    2063
  </li>
  <li>
    2062
  </li>
  <li>
    2061
  </li>
  <li>
    2060
  </li>
  <li>
    2059
  </li>
  <li>
    2058
  </li>
  <li>
    2057
  </li>
  <li>
    2056
  </li>
  <li>
    2055
  </li>
  <li>
    2054
  </li>
  <li>
    2053
  </li>
  <li>
    2052
  </li>
  <li>
    2051
  </li>
  <li>
    2050
  </li>
  <li>
    2049
  </li>
  <li>
    2048
  </li>
  <li>
    2047
  </li>
  <li>
    2046
  </li>
  <li>
    2045
  </li>
  <li>
    2044
  </li>
  <li>
    2043
  </li>
  <li>
    2042
  </li>
  <li>
    2041
  </li>
  <li>
    2040
  </li>
  <li>
    2039
  </li>
  <li>
    2038
  </li>
  <li>
    2037
  </li>
  <li>
    2036
  </li>
  <li>
    2035
  </li>
  <li>
    2034
  </li>
  <li>
    2033
  </li>
  <li>
    2032
  </li>
  <li>
    2031
  </li>
  <li>
    2030
  </li>
  <li>
    2029
  </li>
  <li>
    2028
  </li>
  <li>
    2027
  </li>
  <li>
    2026
  </li>
  <li>
    2025
  </li>
  <li>
    2024
  </li>
  <li>
    2023
  </li>
  <li>
    2022
  </li>
  <li>
    2021
  </li>
  <li>
    2020
  </li>
  <li>
    2019
  </li>
  <li>
    2018
  </li>
  <li>
    2017
  </li>
  <li>
    2016
  </li>
  <li>
    2015
  </li>
  <li>
    2014
  </li>
  <li>
    2013
  </li>
  <li>
    2012
  </li>
  <li>
    2011
  </li>
  <li>
    2010
  </li>
  <li>
    2009
  </li>
  <li>
    2008
  </li>
  <li>
    2007
  </li>
  <li>
    2006
  </li>
  <li>
    2005
  </li>
  <li>
    2004
  </li>
  <li>
    2003
  </li>
  <li>
    2002
  </li>
  <li>
    2001
  </li>
  <li class="active primary--text">
    2000
  </li>
  <li>
    1999
  </li>
  <li>
    1998
  </li>
  <li>
    1997
  </li>
  <li>
    1996
  </li>
  <li>
    1995
  </li>
  <li>
    1994
  </li>
  <li>
    1993
  </li>
  <li>
    1992
  </li>
  <li>
    1991
  </li>
  <li>
    1990
  </li>
  <li>
    1989
  </li>
  <li>
    1988
  </li>
  <li>
    1987
  </li>
  <li>
    1986
  </li>
  <li>
    1985
  </li>
  <li>
    1984
  </li>
  <li>
    1983
  </li>
  <li>
    1982
  </li>
  <li>
    1981
  </li>
  <li>
    1980
  </li>
  <li>
    1979
  </li>
  <li>
    1978
  </li>
  <li>
    1977
  </li>
  <li>
    1976
  </li>
  <li>
    1975
  </li>
  <li>
    1974
  </li>
  <li>
    1973
  </li>
  <li>
    1972
  </li>
  <li>
    1971
  </li>
  <li>
    1970
  </li>
  <li>
    1969
  </li>
  <li>
    1968
  </li>
  <li>
    1967
  </li>
  <li>
    1966
  </li>
  <li>
    1965
  </li>
  <li>
    1964
  </li>
  <li>
    1963
  </li>
  <li>
    1962
  </li>
  <li>
    1961
  </li>
  <li>
    1960
  </li>
  <li>
    1959
  </li>
  <li>
    1958
  </li>
  <li>
    1957
  </li>
  <li>
    1956
  </li>
  <li>
    1955
  </li>
  <li>
    1954
  </li>
  <li>
    1953
  </li>
  <li>
    1952
  </li>
  <li>
    1951
  </li>
  <li>
    1950
  </li>
  <li>
    1949
  </li>
  <li>
    1948
  </li>
  <li>
    1947
  </li>
  <li>
    1946
  </li>
  <li>
    1945
  </li>
  <li>
    1944
  </li>
  <li>
    1943
  </li>
  <li>
    1942
  </li>
  <li>
    1941
  </li>
  <li>
    1940
  </li>
  <li>
    1939
  </li>
  <li>
    1938
  </li>
  <li>
    1937
  </li>
  <li>
    1936
  </li>
  <li>
    1935
  </li>
  <li>
    1934
  </li>
  <li>
    1933
  </li>
  <li>
    1932
  </li>
  <li>
    1931
  </li>
  <li>
    1930
  </li>
  <li>
    1929
  </li>
  <li>
    1928
  </li>
  <li>
    1927
  </li>
  <li>
    1926
  </li>
  <li>
    1925
  </li>
  <li>
    1924
  </li>
  <li>
    1923
  </li>
  <li>
    1922
  </li>
  <li>
    1921
  </li>
  <li>
    1920
  </li>
  <li>
    1919
  </li>
  <li>
    1918
  </li>
  <li>
    1917
  </li>
  <li>
    1916
  </li>
  <li>
    1915
  </li>
  <li>
    1914
  </li>
  <li>
    1913
  </li>
  <li>
    1912
  </li>
  <li>
    1911
  </li>
  <li>
    1910
  </li>
  <li>
    1909
  </li>
  <li>
    1908
  </li>
  <li>
    1907
  </li>
  <li>
    1906
  </li>
  <li>
    1905
  </li>
  <li>
    1904
  </li>
  <li>
    1903
  </li>
  <li>
    1902
  </li>
  <li>
    1901
  </li>
  <li>
    1900
  </li>
</ul>
`;

exports[`VDatePickerYears.ts should respect min/max props 1`] = `
<ul class="v-date-picker-years">
  <li>
    2010
  </li>
  <li>
    2009
  </li>
  <li>
    2008
  </li>
  <li>
    2007
  </li>
  <li>
    2006
  </li>
  <li>
    2005
  </li>
  <li>
    2004
  </li>
  <li>
    2003
  </li>
  <li>
    2002
  </li>
  <li>
    2001
  </li>
  <li class="active primary--text">
    2000
  </li>
  <li>
    1999
  </li>
  <li>
    1998
  </li>
  <li>
    1997
  </li>
  <li>
    1996
  </li>
  <li>
    1995
  </li>
  <li>
    1994
  </li>
  <li>
    1993
  </li>
  <li>
    1992
  </li>
  <li>
    1991
  </li>
  <li>
    1990
  </li>
</ul>
`;
